# fsmus

./: .gitignore  Cargo.toml  README.md  config.ron
src/: args.rs  config.rs  main.rs
src/app/: mod.rs  music_player.rs
src/app/music_player/: mod.rs  playlists.rs
src/remote/: mod.rs
