[package]
name = "fsmus"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Headless CLI music player with playlists as FS directories"

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
directories = "3.0.1"
rand = "0.8.0"
rodio = "0.13.0"
ron = "0.6.4"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
